Selectbar-Search Done

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,7 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Import Bootstrap-select
+@import '~bootstrap-select/dist/css/bootstrap-select.min.css';
+// JQuery-UI
+@import '~jquery-ui/themes/base/all.css';
