--- a/resources/sass/backend/backend.scss
+++ b/resources/sass/backend/backend.scss
@@ -3,6 +3,9 @@
 
 // Import Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Import Bootstrap-select
+@import '~bootstrap-select/dist/css/bootstrap-select.min.css';
+// Import JQuery-UI
 @import '~jquery-ui/themes/base/all.css';
 
 // Import custom styles
