--- a/resources/sass/backend/backend.scss
+++ b/resources/sass/backend/backend.scss
@@ -1,6 +1,5 @@
 // Import Custom Variables
 @import "variables";
-
 // Import Bootstrap
 @import '~bootstrap/scss/bootstrap';
 // Import Bootstrap-select
@@ -11,7 +10,7 @@
 // @import '~sweetalert2/src/sweetalert2.scss';
 // Import Cropper Js
 @import '~cropperjs/dist/cropper.min.css';
-
+@import "~vue-select/src/scss/vue-select.scss";
 // Import custom styles
 @import "./mixins.scss";
 @import "./global.scss";
@@ -20,11 +19,10 @@
 @import "./cards.scss";
 @import "./login.scss";
 @import "./footer.scss";
-
-body{
+body {
     font-family: '微軟正黑體';
 }
 
-#go_top_btn{
+#go_top_btn {
     z-index: 100;
 }
