--- a/resources/sass/frontend/_header.scss
+++ b/resources/sass/frontend/_header.scss
@@ -6,8 +6,17 @@ section#header {
 
 header {
     position: relative;
+    height: 100%;
     img {
         width: 100%;
+    }
+}
+
+@media (max-width: 1000px) {
+    header {
+        img {
+            height: 81%;
+        }
     }
 }
 
@@ -15,7 +24,7 @@ div#headerbox {
     width: 100%;
     height: 120px;
     position: absolute;
-    top: 66%;
+    bottom: 0px;
     left: 0px;
     z-index: 1;
     .row {
