--- a/resources/sass/frontend/frontend.scss
+++ b/resources/sass/frontend/frontend.scss
@@ -13,6 +13,7 @@
 @import "./utilities.scss";
 @import "./navbar.scss";
 @import "./header.scss";
+@import "./news.scss";
 @import "./footer.scss";
 // #go_top_btn {
 //     z-index: 100;
