--- a/public/css/frontend/frontend.css
+++ b/public/css/frontend/frontend.css
@@ -11739,12 +11739,12 @@ header {
   position: relative;
   height: 100%;
 }
-header img {
+header img.background-image {
   width: 100%;
 }
 
 @media (max-width: 1000px) {
-  header img {
+  header img.background-image {
     height: 81%;
   }
 }
@@ -11769,6 +11769,22 @@ div#headerbox .row div.left {
 }
 div#headerbox .row div.right {
   background-color: #93e5b4;
+}
+div#headerbox .row div .checkBtn {
+  width: 10%;
+  display: inline-block;
+  position: absolute;
+  top: 20%;
+  right: 10%;
+  padding: 0;
+}
+div#headerbox .row div .checkBtn a img {
+  width: 100%;
+}
+@media (max-width: 1000px) {
+  div#headerbox .row div .checkBtn {
+    top: 30%;
+  }
 }
 div#headerbox .row span {
   color: #929292;
@@ -11838,6 +11854,131 @@ div#headerbox .row h3 {
   display: inline-block;
 }
 #newsIcon img {
+  width: 100%;
+}
+
+#activity {
+  width: 100%;
+  height: 100vh;
+  color: #55473f;
+  background-color: #ffffff;
+  position: relative;
+}
+#activity .content {
+  width: 90%;
+  height: 125%;
+  border-radius: 40px;
+  position: absolute;
+  top: -35%;
+  left: 5%;
+  background-color: #93e5b4;
+}
+#activity .content .container {
+  padding-top: 5%;
+}
+#activity .content .container h1 {
+  letter-spacing: 20px;
+  font-weight: bold;
+}
+#activity .content .container .activityRow {
+  height: 610px;
+  padding-top: 3%;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image {
+  overflow: hidden;
+  height: 100%;
+  position: relative;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image img {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: calc(50% + 0px);
+  transform: translateX(-50%);
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image .activity_text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 20px;
+  color: #ffffff;
+  z-index: 1;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image .activity_text .datetime {
+  font-size: 1.2rem;
+  letter-spacing: 3px;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image .activity_text .title {
+  letter-spacing: 3px;
+  line-height: 2.5rem;
+  font-weight: bold;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image .activity_text .readmore {
+  text-align: right;
+  letter-spacing: 3px;
+}
+#activity .content .container .activityRow .activity_unit_top .cover_image .gray {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#fff0, 80%, #929292);
+}
+#activity .content .container .activityRow .activity_unit .cover_image {
+  overflow: hidden;
+  height: 100%;
+  position: relative;
+}
+#activity .content .container .activityRow .activity_unit .cover_image img {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: calc(50% + 0px);
+  transform: translateX(-50%);
+}
+#activity .content .container .activityRow .activity_unit .activity_text {
+  color: #55473f;
+}
+#activity .content .container .activityRow .activity_unit .activity_text .datetime {
+  font-size: 1rem;
+  letter-spacing: 3px;
+}
+#activity .content .container .activityRow .activity_unit .activity_text .title {
+  letter-spacing: 3px;
+  line-height: 2rem;
+  font-weight: bold;
+}
+#activity .content .container .activityRow .activity_unit .activity_text .readmore {
+  color: #ffffff;
+  text-align: right;
+  letter-spacing: 3px;
+}
+#activity .content .container .checkRecommendationBtn {
+  border: 1px solid #ffffff;
+  border-radius: 25px;
+  margin-left: auto;
+  width: 48%;
+  text-align: center;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
+  margin-top: 5%;
+  padding: 17px;
+}
+#activity .content .container .checkRecommendationBtn img {
+  width: 6%;
+  margin-top: -2%;
+}
+
+#activityIcon {
+  background-color: #ffffff;
+  border-radius: 40px;
+  width: 60px;
+  height: 60px;
+  display: inline-block;
+  padding: 5px 10px 10px 10px;
+}
+#activityIcon img {
   width: 100%;
 }
 
