--- a/resources/sass/frontend/frontend.scss
+++ b/resources/sass/frontend/frontend.scss
@@ -14,6 +14,7 @@
 @import "./navbar.scss";
 @import "./header.scss";
 @import "./news.scss";
+@import "./activity.scss";
 @import "./footer.scss";
 // #go_top_btn {
 //     z-index: 100;
