--- a/resources/sass/frontend/_activity.scss
+++ b/resources/sass/frontend/_activity.scss
@@ -34,6 +34,7 @@
                             transform: translateX(-50%);
                         }
                         .activity_text {
+                            width: 100%;
                             position: absolute;
                             left: 0;
                             bottom: 0;
