--- a/resources/sass/frontend/_activity.scss
+++ b/resources/sass/frontend/_activity.scss
@@ -6,7 +6,7 @@
     position: relative;
     .content {
         width: 90%;
-        height: 125%;
+        height: 910px;
         border-radius: 40px;
         position: absolute;
         top: -35%;
