--- a/resources/sass/frontend/_navbar.scss
+++ b/resources/sass/frontend/_navbar.scss
@@ -147,9 +147,10 @@
     position: absolute;
     background-color: $white;
     top: 0;
-    right: -25%;
-    width: 25%;
+    right: -30%;
+    width: 30%;
     height: 100vh;
+    padding-right: 6%;
     .navbar-nav {
         width: 70%;
         display: block;
@@ -176,7 +177,7 @@
     }
     #closeBtn {
         margin-top: 2%;
-        margin-right: 4%;
+        margin-right: 1%;
         font-size: 2rem;
         color: $green;
         &:hover {
