--- a/resources/sass/frontend/frontend.scss
+++ b/resources/sass/frontend/frontend.scss
@@ -12,6 +12,7 @@
 @import "./global.scss";
 @import "./utilities.scss";
 @import "./navbar.scss";
+@import "./sidebar.scss";
 @import "./header.scss";
 @import "./news.scss";
 @import "./activity.scss";
