--- a/resources/sass/frontend/_activity.scss
+++ b/resources/sass/frontend/_activity.scss
@@ -1,6 +1,6 @@
 #activity {
     width: 100%;
-    height: 100vh;
+    height: 720px;
     color: $brown;
     background-color: $white;
     position: relative;
