--- a/resources/sass/frontend/_footer.scss
+++ b/resources/sass/frontend/_footer.scss
@@ -1,28 +1,51 @@
-footer.sticky-footer {
-  z-index: 99;
-  display: flex;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: calc(100% - #{$sidebar-collapsed-width});
-  height: $sticky-footer-height;
-  background-color: $gray-200;
-  .copyright {
-    line-height: 1;
-    font-size: 0.8rem;
-  }
-  @media (min-width: 768px) {
-    width: calc(100% - #{$sidebar-base-width});
-  }
-}
-
-body.sidebar-toggled {
-  footer.sticky-footer {
+footer{
     width: 100%;
-  }
-  @media (min-width: 768px) {
-    footer.sticky-footer {
-      width: calc(100% - #{$sidebar-collapsed-width});
-    }
-  }
+    height: $footer-height;
+	display: flex;
+	background-color: $brown;
+	color: $darkwhite;
+	.container{
+		position: relative;
+		padding-top: 10px;
+		.footerTable{
+			font-size: 1rem;
+			letter-spacing: 3px;
+			th{
+				color: $white;
+				font-weight: bold;
+				padding: 10px 0px;
+			}
+			td{
+				padding-right: 10px;
+			}
+		}
+		.footerText{
+			width: 100%;
+			position: absolute;
+			right: 0;
+			bottom: 20px;
+			font-size: 0.8rem;
+			text-align: right;
+			.footerLink{
+				color: $pink;
+				a{
+					color: $pink;
+					letter-spacing: 2px;
+				}
+			}
+			.copyright {
+				line-height: 2rem;
+			}
+			@media (max-width: 768px) {
+				text-align: left;
+				right: -15px;
+			}
+		}
+	}
+	@media (max-width: 992px) {
+		height: calc(#{$footer-height} + 61px);
+	}
+	@media (max-width: 768px) {
+		height: calc(#{$footer-height} + 126px);
+	}
 }
