--- a/resources/sass/frontend/_header.scss
+++ b/resources/sass/frontend/_header.scss
@@ -1,6 +1,8 @@
 section#header {
     width: 100%;
-    height: 86vh;
+    height: calc(100vh - 100px);
+    max-height: calc(100vw / 2);
+    min-height: 480px;
     overflow: hidden;
 }
 
@@ -30,7 +32,8 @@ header {
     }
 }
 
-@media (max-width: 1000px) {
+// #header的min-height，扣掉#headerbox的height，再乘上封面圖片的比例(2)。
+@media (max-width: (480px - 120px) * $cover-raito) {
     header {
         img.background-image {
             width: auto !important;
