--- a/resources/sass/frontend/_news.scss
+++ b/resources/sass/frontend/_news.scss
@@ -1,6 +1,6 @@
 #news {
     width: 100%;
-    height: 100vh;
+    height: 720px;
     color: $brown;
     background-color: $darkwhite;
     .container {
